# GeradorEscalaDiaconos

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  gerador_escala.py
tests/: test_gerador_escala.py
