[tool.poetry]
name = "gerador-escala-diaconos"
version = "0.1.0"
description = "Gerador de escala para diáconos"
authors = ["Greg"]
readme = "README.md"
packages = [{include = "src"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
